--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" href="../img/logo.png">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/lightSlider.css">
+  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="public/css/lightSlider.css">
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:wght@300&family=Poppins&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
   <!-- Script -->
-  <script type="text/javascript" src="../js/jquery.js"></script>
-  <script type="text/javascript" src="../js/lightslider.js"></script>
+  <script type="text/javascript" src="public/js/jquery.js"></script>
+  <script type="text/javascript" src="public/js/lightslider.js"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
@@ -31,7 +31,7 @@
     <div class="container m-auto">
       <div class="flex items-center relative py-2">
         <div class="px-4">
-          <img src="../img/logo.png" alt="" class="w-[50px] h-[30px] lg:w-[70px] lg:h-[50px]">
+          <img src="public/img/logo.png" alt="" class="w-[50px] h-[30px] lg:w-[70px] lg:h-[50px]">
         </div>
         <div class="flex items-center px-4 w-full">
           <!-- Start: Hamburger menu -->
@@ -115,19 +115,19 @@
         <div class="swiper-wrapper">
           <!-- Start : Carousel item 1 -->
           <div class="swiper-slide border">
-            <img src="../img/banner-1.png" alt="" class="w-full h-[200px] lg:h-[550px]">
+            <img src="public/img/banner-1.png" alt="" class="w-full h-[200px] lg:h-[550px]">
           </div>
           <!-- Start : Carousel item 1 -->
   
           <!-- Start : Carousel item 1 -->
           <div class="swiper-slide border">
-            <img src="../img/banner-2.png" alt="" class="w-full h-[200px] lg:h-[550px]">
+            <img src="public/img/banner-2.png" alt="" class="w-full h-[200px] lg:h-[550px]">
           </div>
           <!-- Start : Carousel item 1 -->
   
           <!-- Start : Carousel item 1 -->
           <div class="swiper-slide border">
-            <img src="../img/banner-3.png" alt="" class="w-full h-[200px] lg:h-[550px]">
+            <img src="public/img/banner-3.png" alt="" class="w-full h-[200px] lg:h-[550px]">
           </div>
           <!-- Start : Carousel item 1 -->
         </div>
@@ -151,91 +151,91 @@
           <div class="flex-wrap flex items-center justify-between lg:justify-between">
             <!-- Start: card body 1 -->
             <div class="card-body p-2">
-              <img src="../img/merk-1.png" alt="">
+              <img src="public/img/merk-1.png" alt="">
             </div>
             <!-- End: card body 1 -->
 
             <!-- Start: card body 2 -->
             <div class="card-body p-2">
-              <img src="../img/merk-2.png" alt="">
+              <img src="public/img/merk-2.png" alt="">
             </div>
             <!-- End: card body 2 -->
 
             <!-- Start: card body 3 -->
             <div class="card-body p-2">
-              <img src="../img/merk-3.png" alt="">
+              <img src="public/img/merk-3.png" alt="">
             </div>
             <!-- End: card body 3 -->
 
             <!-- Start: card body 4 -->
             <div class="card-body p-2">
-              <img src="../img/merk-4.png" alt="">
+              <img src="public/img/merk-4.png" alt="">
             </div>
             <!-- End: card body 4 -->
 
             <!-- Start: card body 5 -->
             <div class="card-body p-2">
-              <img src="../img/merk-5.png" alt="">
+              <img src="public/img/merk-5.png" alt="">
             </div>
             <!-- End: card body 5 -->
 
             <!-- Start: card body 6 -->
             <div class="card-body p-2">
-              <img src="../img/merk-6.png" alt="">
+              <img src="public/img/merk-6.png" alt="">
             </div>
             <!-- End: card body 6 -->
 
             <!-- Start: card body 7 -->
             <div class="card-body p-2">
-              <img src="../img/merk-7.png" alt="">
+              <img src="public/img/merk-7.png" alt="">
             </div>
             <!-- End: card body 7 -->
 
             <!-- Start: card body 8 -->
             <div class="card-body p-2">
-              <img src="../img/merk-8.png" alt="">
+              <img src="public/img/merk-8.png" alt="">
             </div>
             <!-- End: card body 8 -->
 
             <!-- Start: card body 9 -->
             <div class="card-body p-2">
-              <img src="../img/merk-9.png" alt="">
+              <img src="public/img/merk-9.png" alt="">
             </div>
             <!-- End: card body 9 -->
 
             <!-- Start: card body 10 -->
             <div class="card-body p-2">
-              <img src="../img/merk-10.png" alt="">
+              <img src="public/img/merk-10.png" alt="">
             </div>
             <!-- End: card body 10 -->
 
             <!-- Start: card body 11 -->
             <div class="card-body p-2">
-              <img src="../img/merk-11.png" alt="">
+              <img src="public/img/merk-11.png" alt="">
             </div>
             <!-- End: card body 11 -->
 
             <!-- Start: card body 12 -->
             <div class="card-body p-2">
-              <img src="../img/merk-12.png" alt="">
+              <img src="public/img/merk-12.png" alt="">
             </div>
             <!-- End: card body 12 -->
 
             <!-- Start: card body 13 -->
             <div class="card-body p-2">
-              <img src="../img/merk-13.png" alt="">
+              <img src="public/img/merk-13.png" alt="">
             </div>
             <!-- End: card body 13 -->
 
             <!-- Start: card body 14 -->
             <div class="card-body p-2">
-              <img src="../img/merk-14.png" alt="">
+              <img src="public/img/merk-14.png" alt="">
             </div>
             <!-- End: card body 14 -->
 
             <!-- Start: card body 17 -->
             <div class="card-body p-2">
-              <img src="../img/merk-17.png" alt="">
+              <img src="public/img/merk-17.png" alt="">
             </div>
             <!-- End: card body 17 -->
 
@@ -258,9 +258,9 @@
           <!-- Start: card body 1 -->
           <div class="col-span-6 lg:col-span-4">
             <div class="relative">
-              <img src="../img/bg-1.png" alt="" class="w-full">
+              <img src="public/img/bg-1.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="../img/icon-1.png" alt="" class="w-4 lg:w-auto">
+                <img src="public/img/icon-1.png" alt="" class="w-4 lg:w-auto">
                 <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Chat Agen</h4>
                 <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Hubungi kami langsung jika kamu mau saran kami dalam memilih mobil</p>
               </div>
@@ -271,9 +271,9 @@
           <!-- Start: card body 2 -->
           <div class="col-span-6 lg:col-span-4">
             <div class="relative">
-              <img src="../img/bg-2.png" alt="" class="w-full">
+              <img src="public/img/bg-2.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="../img/icon-2.png" alt="" class="w-8 lg:w-auto">
+                <img src="public/img/icon-2.png" alt="" class="w-8 lg:w-auto">
                 <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Pilih Mobil</h4>
                 <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Nikmati berbagai merek mobil yang disediakan oleh MauMobil</p>
               </div>
@@ -284,9 +284,9 @@
           <!-- Start: card body 3 -->
           <div class="col-span-6 lg:col-span-4">
             <div class="relative">
-              <img src="../img/bg-3.png" alt="" class="w-full">
+              <img src="public/img/bg-3.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="../img/icon-3.png" alt="" class="w-8 lg:w-auto">
+                <img src="public/img/icon-3.png" alt="" class="w-8 lg:w-auto">
                 <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Test Drive</h4>
                 <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Pilih mobil kesukaan Anda dan kenali mobil Anda dengan melakukan test drive di MauMobil</p>
               </div>
@@ -297,9 +297,9 @@
           <!-- Start: card body 4 -->
           <div class="col-span-6 lg:col-span-4">
             <div class="relative">
-              <img src="../img/bg-1.png" alt="" class="w-full">
+              <img src="public/img/bg-1.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="../img/icon-4.png" alt="" class="w-8 lg:w-auto">
+                <img src="public/img/icon-4.png" alt="" class="w-8 lg:w-auto">
                 <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Services Booking</h4>
                 <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Kamu dapat membooking service mobil tanpa perlu antri</p>
               </div>
@@ -310,9 +310,9 @@
           <!-- Start: card body 5 -->
           <div class="col-span-6 lg:col-span-4">
             <div class="relative">
-              <img src="../img/bg-2.png" alt="" class="w-full">
+              <img src="public/img/bg-2.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="../img/icon-5.png" alt="" class="w-8 lg:w-auto">
+                <img src="public/img/icon-5.png" alt="" class="w-8 lg:w-auto">
                 <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">DP Mobil</h4>
                 <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Pilih mobil yang anda suka dengan berbagai harga yang telah disediakan</p>
               </div>
@@ -323,9 +323,9 @@
           <!-- Start: card body 6 -->
           <div class="col-span-6 lg:col-span-4">
             <div class="relative">
-              <img src="../img/bg-3.png" alt="" class="w-full">
+              <img src="public/img/bg-3.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="../img/icon-6.png" alt="" class="w-8 lg:w-auto">
+                <img src="public/img/icon-6.png" alt="" class="w-8 lg:w-auto">
                 <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Promo Mobil</h4>
                 <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Jangan sampai tertinggal promo kami, karena akan ada promo besar-besaran</p>
               </div>
@@ -358,7 +358,7 @@
     <div class="container m-auto">
       <div class="flex flex-wrap items-center gap-1">
         <div class="w-full lg:w-[40%]">
-          <img src="../img/avatar.png" alt="" class="h-[200px] lg:h-[450px] m-auto">
+          <img src="public/img/avatar.png" alt="" class="h-[200px] lg:h-[450px] m-auto">
         </div>
         <div class="w-full lg:w-[50%] p-2 lg:p-0">
           <div class="ml-0 lg:ml-10">
@@ -395,7 +395,7 @@
       <li class="item-a">
         <div class="box">
           <div class="slider">
-            <img src="../img/galleri-1.png" alt="">
+            <img src="public/img/galleri-1.png" alt="">
             <div class="absolute top-5 lg:top-16 max-w-[200px] lg:max-w-[500px] left-4 lg:left-10 p-2 lg:p-6">
               <h4 class="font-poppins text-white font-semibold text-[10px] lg:text-2xl mb-2">Berbagi Kebahagiaan Bersama!!</h4>
               <p class="text-white font-medium font-poppins text-[8px] lg:text-base w-[150px] lg:w-full">
@@ -409,7 +409,7 @@
       <li class="item-b">
         <div class="box">
           <div class="slider">
-            <img src="../img/galleri-2.png" alt="">
+            <img src="public/img/galleri-2.png" alt="">
             <div class="absolute top-2 lg:top-16 max-w-[200px] lg:max-w-[500px] right-2 lg:right-10 p-2 lg:p-6">
               <h4 class="font-poppins text-white text-right font-semibold text-[10px] lg:text-2xl mb-2">Nikmati Kegiatan Anda  dengan Berbagai Aktifitas yang Menyenangkan  </h4>
               <p class="text-white font-medium text-right font-poppins text-[8px] lg:text-base ">
@@ -423,7 +423,7 @@
       <li class="item-c">
         <div class="box">
           <div class="slider">
-            <img src="../img/galleri-3.png" alt="">
+            <img src="public/img/galleri-3.png" alt="">
               <div class="absolute top-2 lg:top-16 max-w-[200px] lg:max-w-[500px] left-4 lg:left-10 p-2 lg:p-6">
                 <h4 class="font-poppins text-white font-semibold text-[10px] lg:text-2xl mb-2">Nikmati Kegiatan Anda  dengan Berbagai Aktifitas yang Menyenangkan  </h4>
                 <p class="text-white font-medium font-poppins text-[8px] lg:text-base w-[150px] lg:w-full">
@@ -486,8 +486,8 @@
   </section>
   <!-- End: Footer section -->
 
-  <script type="text/javascript" src="../js/index.js"></script>
-  <script type="text/javascript" src="../js/modal.js"></script>
+  <script type="text/javascript" src="public/js/index.js"></script>
+  <script type="text/javascript" src="public/js/modal.js"></script>
 
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
