--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mau Mobil</title>
-  <link rel="icon" href="../img/logo.png">
+  <link rel="icon" href="public/img/logo.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="public/css/style.css">
