--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15928.279274851939!2d98.6702814!3d3.5714144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3031302fe490fe11%3A0x3372cac556f288ca!2sIndigoSpace%20Medan!5e0!3m2!1sid!2sid!4v1676432606107!5m2!1sid!2sid" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full"></iframe>
         </div>
         <!-- Start: Find us -->
-        <div class="w-full lg:w-[60%] ml-10">
+        <div class="w-full lg:w-[60%] ml-0 lg:ml-10">
           <h4 class="font-poppins font-semibold text-sm lg:text-xl text-center lg:text-left mb-4">Contact Us</h4>
           <div class="grid grid-cols-6 gap-4">
             <!-- Start: Find us item 1 -->
