--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
               <img src="public/img/bg-1.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
                 <img src="public/img/icon-1.png" alt="" class="w-4 lg:w-auto">
-                <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Chat Agen</h4>
-                <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Hubungi kami langsung jika kamu mau saran kami dalam memilih mobil</p>
+                <h4 class="font-poppins font-semibold text-xs lg:text-2xl text-white mt-2">Chat Agen</h4>
+                <p class="font-poppins text-[9px] lg:text-xl text-slate-200 text-center">Hubungi kami langsung jika kamu mau saran kami dalam memilih mobil</p>
               </div>
             </div>
           </div>
@@ -274,8 +274,8 @@
               <img src="public/img/bg-2.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
                 <img src="public/img/icon-2.png" alt="" class="w-20 lg:w-auto">
-                <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Pilih Mobil</h4>
-                <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Nikmati berbagai merek mobil yang disediakan oleh MauMobil</p>
+                <h4 class="font-poppins font-semibold text-xs lg:text-2xl text-white mt-2">Pilih Mobil</h4>
+                <p class="font-poppins text-[9px] lg:text-xl text-slate-200 text-center">Nikmati berbagai merek mobil yang disediakan oleh MauMobil</p>
               </div>
             </div>
           </div>
@@ -286,9 +286,9 @@
             <div class="relative">
               <img src="public/img/bg-3.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
-                <img src="public/img/icon-3.png" alt="" class="w-8 lg:w-auto">
-                <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Test Drive</h4>
-                <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Pilih mobil kesukaan Anda dan kenali mobil Anda dengan melakukan test drive di MauMobil</p>
+                <img src="public/img/icon-3.png" alt="" class="w-6 lg:w-auto">
+                <h4 class="font-poppins font-semibold text-xs lg:text-2xl text-white mt-2">Test Drive</h4>
+                <p class="font-poppins text-[9px] lg:text-xl text-slate-200 text-center">Pilih mobil kesukaan Anda dan kenali mobil Anda dengan melakukan test drive di MauMobil</p>
               </div>
             </div>
           </div>
@@ -300,8 +300,8 @@
               <img src="public/img/bg-1.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
                 <img src="public/img/icon-4.png" alt="" class="w-8 lg:w-auto">
-                <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Services Booking</h4>
-                <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Kamu dapat membooking service mobil tanpa perlu antri</p>
+                <h4 class="font-poppins font-semibold text-xs lg:text-2xl text-white mt-2">Services Booking</h4>
+                <p class="font-poppins text-[9px] lg:text-xl text-slate-200 text-center">Kamu dapat membooking service mobil tanpa perlu antri</p>
               </div>
             </div>
           </div>
@@ -313,8 +313,8 @@
               <img src="public/img/bg-2.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
                 <img src="public/img/icon-5.png" alt="" class="w-8 lg:w-auto">
-                <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">DP Mobil</h4>
-                <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Pilih mobil yang anda suka dengan berbagai harga yang telah disediakan</p>
+                <h4 class="font-poppins font-semibold text-xs lg:text-2xl text-white mt-2">DP Mobil</h4>
+                <p class="font-poppins text-[9px] lg:text-xl text-slate-200 text-center">Pilih mobil yang anda suka dengan berbagai harga yang telah disediakan</p>
               </div>
             </div>
           </div>
@@ -326,8 +326,8 @@
               <img src="public/img/bg-3.png" alt="" class="w-full">
               <div class="absolute flex flex-col items-center top-0 p-2 lg:p-6">
                 <img src="public/img/icon-6.png" alt="" class="w-8 lg:w-auto">
-                <h4 class="font-poppins font-semibold text-sm lg:text-2xl text-white mt-2">Promo Mobil</h4>
-                <p class="font-poppins text-[10px] lg:text-xl text-slate-200 text-center">Jangan sampai tertinggal promo kami, karena akan ada promo besar-besaran</p>
+                <h4 class="font-poppins font-semibold text-xs lg:text-2xl text-white mt-2">Promo Mobil</h4>
+                <p class="font-poppins text-[9px] lg:text-xl text-slate-200 text-center">Jangan sampai tertinggal promo kami, karena akan ada promo besar-besaran</p>
               </div>
             </div>
           </div>
