--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </ul>
             <div class="hidden lg:block">
               <button class="bg-darkBlue text-white active:opacity-80 font-poppins text-sm px-6 py-2 rounded-lg ease-linear transition-all duration-150" type="button" onclick="toggleModal('modal-id')">
-                Download Sekarang
+                Download Sekarang yaaa
               </button>
             </div>
           </nav>
